--- a/hugo.toml
+++ b/hugo.toml
@@ -1,69 +1,3 @@
-baseURL = "https://orphicsec.com"
-theme = "PaperMod"
-title = "orphic"
-languageCode = "en-us"
-
-[pagination]
-  pagerSize = 10
-
-[params]
-  env = "production"
-  description = "Security research and exploits"
-  author = "orphic"
-  
-  ShowReadingTime = true
-  ShowCodeCopyButtons = true
-  ShowPostNavLinks = true
-  ShowBreadCrumbs = false
-  
-  defaultTheme = "dark"
-  disableThemeToggle = true
-
-  [params.homeInfoParams]
-      Title = ">$ orphic"
-      Content = """
-"
-
-When I’m working on a problem,
-
-I never think about beauty.
-
-I think only how to solve the problem.
-
-But when I have finished,
-
-if the solution is not beautiful,
-
-I know it is wrong.
-
-"
-"""
-
-[menu]
-  [[menu.main]]
-    name = "JOURNAL"
-    url = "/posts/"
-    weight = 10
-
-  [[menu.main]]
-    name = "ABOUT"
-    url = "/about/"
-    weight = 20
-
-  [[menu.main]]
-    name = "HACKING"
-    url = "/hacking/"
-    weight = 30
-
-  [[menu.main]]
-    name = "LIBRARY"
-    url = "/library/"
-    weight = 30
-
-  [[menu.main]]
-    name = "TAGS"
-    url = "/tags/"
-    weight = 40
-
-[outputs]
-  home = ["HTML", "RSS", "JSON"]
+baseURL = 'https://example.org/'
+languageCode = 'en-us'
+title = 'My New Hugo Site'
